--- a/assets/i18n/ar.json
+++ b/assets/i18n/ar.json
@@ -29,7 +29,7 @@
     "chooseBestFlowers": "باختيار أجمل الورود",
     "heroIntro": "في متجرنا، نقدم لك أجمل تشكيلات الورود التي تضيف لمسة من الجمال والبهجة لكل لحظة. اكتشف الآن باقة من الزهور المميزة التي تناسب جميع المناسبات وتلامس القلوب.",
     "fastDelivery": "توصيل في نفس اليوم",
-    "fastDeliveryNote": "نضمن لك توصيل الزهور في نفس اليوم لضمان تجربة شراء سريعة ومريحة",
+    "fastDeliveryNote": "توصيل الزهور في نفس اليوم لضمان تجربة شراء سريعة ومريحة",
     "qulityGoods": "هدية مثالية لجميع المناسبات",
     "qulityGoodsNote": "نقدم لك أجمل الزهور التي تناسب كل مناسبة وتضفي لمسة خاصة",
     "newIdeas": "تصاميم مبتكرة ومميزة",
