--- a/assets/i18n/ar.json
+++ b/assets/i18n/ar.json
@@ -19,6 +19,7 @@
     "allCategories": "جميع الأصناف",
     "mostImportantCategories": "اهم الأصناف",
     "flowers": "ورد ❤️ ؟",
+    "more":"المزيد",
     "flowers1": "ورد",
     "bestSeller": "الأكثر مبيعًا",
     "orderNow": "اطلب الآن",
