--- a/assets/i18n/ar.json
+++ b/assets/i18n/ar.json
@@ -36,5 +36,6 @@
     "newIdeas": "تصاميم مبتكرة ومميزة",
     "newIdeasNote": "نتميز بتصاميم فريدة من نوعها تلبي جميع الأذواق وتضيف جمالاً لأي مناسبة",
     "goodPrices":"أسعار تنافسية ومناسبة للجميع",
-    "goodPricesNote":" نقدم أفضل الزهور بأسعار مناسبة وجودة عالية تلائم كافة الميزانيات"
+    "goodPricesNote":" نقدم أفضل الزهور بأسعار مناسبة وجودة عالية تلائم كافة الميزانيات",
+    "copyRightSaved": "جميع الحقوق محفوظة ©"
   }
