--- a/assets/i18n/ar.json
+++ b/assets/i18n/ar.json
@@ -37,5 +37,21 @@
     "newIdeasNote": "نتميز بتصاميم فريدة من نوعها تلبي جميع الأذواق وتضيف جمالاً لأي مناسبة",
     "goodPrices":"أسعار تنافسية ومناسبة للجميع",
     "goodPricesNote":" نقدم أفضل الزهور بأسعار مناسبة وجودة عالية تلائم كافة الميزانيات",
-    "copyRightSaved": "جميع الحقوق محفوظة ©"
+    "copyRightSaved": "جميع الحقوق محفوظة ©",
+    "allOrders": "جميع الطلبات",
+    "pendingOrders": "طلبات عالقة",
+    "completedOrders": "طلبات منجزة ",
+    "rejectedOrders": "طلبات مرفوضة",
+    "theOrders":"الطلبات",
+    "theNumber":"الرقم",
+    "theBuyer":"المشتري",
+    "thePrice":"السعر",
+    "theDetails":"التفاصيل",
+    "theStatus": "الحالة",
+    "theCategories": "الأصناف",
+    "dashboard": "لوحة القيادة",
+    "theAdmin": "مدير النظام",
+    "add": "اضافة",
+    "edit": "تعديل",
+    "remove": "حذف"
   }
